--- a/app/assets/stylesheets/actiontext.css
+++ b/app/assets/stylesheets/actiontext.css
@@ -4,6 +4,8 @@
  * inclusion directly in any other asset bundle and remove this file.
  *
  *= require trix
+ *= require simple_calendar
+ *= require_tree .
 */
 
 /*
