--- a/app/views/meetings/_meeting.html.erb
+++ b/app/views/meetings/_meeting.html.erb
@@ -1,3 +1,4 @@
+<div class="text-center items-center lg:p-12 p-4 grid grid-cols-1 lg:grid-cols-12 gap-x-12 gap-y-6 relative z-20">
 <div id="<%= dom_id meeting %>">
   <p class="my-5">
     <strong class="block font-medium mb-1">Name:</strong>
@@ -14,14 +15,10 @@
     <%= meeting.end_time %>
   </p>
 
-  <p class="my-5">
-    <strong class="block font-medium mb-1">User:</strong>
-    <%= meeting.user_id %>
-  </p>
-
   <% if action_name != "show" %>
     <%= link_to "Show this meeting", meeting, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
     <%= link_to 'Edit this meeting', edit_meeting_path(meeting), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
     <hr class="mt-6">
   <% end %>
+</div>
 </div>
