--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -1,14 +1,13 @@
  <head>
   <title>
-    <%= content_for?(:title) ? yield(:title) : "Kickoff Tailwind" %>
+    <%= content_for?(:title) ? yield(:title) : "Sala de Reunioes" %>
   </title>
-
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag  'application', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag "application", defer: true %>
   <%= javascript_importmap_tags %>
-  <%#= javascript_include_tag 'https://js.stripe.com/v3/', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'https://js.stripe.com/v3/', 'data-turbolinks-track': 'reload' %>
+  <%= tag :meta, name: "stripe-public-key", content: Rails.application.credentials.stripe_publishable_key %>
 </head>
