--- a/app/views/meetings/_meeting.html.erb
+++ b/app/views/meetings/_meeting.html.erb
@@ -1,17 +1,17 @@
 <div class="text-center items-center lg:p-12 p-4 grid grid-cols-1 lg:grid-cols-12 gap-x-12 gap-y-6 relative z-20">
 <div id="<%= dom_id meeting %>">
   <p class="my-5">
-    <strong class="block font-medium mb-1">Name:</strong>
+    <strong class="block font-medium mb-1">Nome da Reuniao:</strong>
     <%= meeting.name %>
   </p>
 
   <p class="my-5">
-    <strong class="block font-medium mb-1">Start time:</strong>
+    <strong class="block font-medium mb-1">Inicio:</strong>
     <%= meeting.start_time %>
   </p>
 
   <p class="my-5">
-    <strong class="block font-medium mb-1">End time:</strong>
+    <strong class="block font-medium mb-1">Termino:</strong>
     <%= meeting.end_time %>
   </p>
 
