--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html class="h-full antialiased">
+<link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+    
   <%= render "shared/head" %>
 
     <header class="bg-white">
