--- a/app/views/meetings/_meetings_cta.html.erb
+++ b/app/views/meetings/_meetings_cta.html.erb
@@ -1,5 +1,5 @@
 <div class="max-w-md my-10 m-auto p-12 lg:p-16 bg-white border-grey-light text-center shadow">
   <h1 class="text-indigo-darker text-2xl mb-6">Voce ainda nao tem nenhuma reuniao!</h1>
   <%= image_tag "calendar.svg", class:"inline-block align-baseline" , alt: "calendar" ,width: 300, class:"mx-auto" %>
-  <%= link_to "Agendar uma reuniao", new_meeting_path, class: "btn btn-primary py-3 px-5" %>
+  <%= link_to "Agendar uma reuniao", new_meeting_path, class:"bg-gray-500 border p-3 hover:bg-gray-50 transition ease duration-300 rounded-lg text-center focus:bg-gray-100 lg:inline-block block lg:ml-2" %>
 </div>
