--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -12,18 +12,18 @@
   <% end %>
 
   <div class="my-5">
-    <%= form.label :name %>
+    <%= form.label :nome %>
     <%= form.text_field :name, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
   <div class="my-5">
-    <%= form.label :start_time %>
-    <%= form.datetime_field :start_time, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.label :inicio %>
+    <%= form.datetime_select :start_time, { start_day: Date.today, start_year: Date.today.year, minute_step: 30 }, { class: "select py-2 px-2 mr-2" } %>
   </div>
 
   <div class="my-5">
-    <%= form.label :end_time %>
-    <%= form.datetime_field :end_time, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.label :final %>
+    <%= form.datetime_select :end_time, { start_day: Date.today, start_year: Date.today.year, minute_step: 30 }, { class: "select py-2 px-2 mr-2" } %>
   </div>
   <div class="inline">
   <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 inline-block font-medium cursor-pointer" %>
