--- a/app/views/meetings/_meetings_landing.html.erb
+++ b/app/views/meetings/_meetings_landing.html.erb
@@ -1,33 +1,31 @@
+
 <div class="bg-white p-10 border">
   <div id="all-meetings" class="tab-panel">
-    <h1>Reuniões</h1>
+    <h1>Minhas Reuniões Agendadas</h1>
     <% meetings.each do |meeting| %>
-      <div class="flex flex-wrap items-center justify-start p-4 border-b border-grey-light mb-6">
+      <div class="flex flex-wrap items-center justify-start p-1 border-b border-grey-light mb-6">
         <div class="flex-1 flex justify-between">
           <%# Alow edit only future user meetigs %>
           <% if current_user.id == meeting.user.id && Time.now < meeting.start_time %>
             <div>
               <%= link_to meeting.name, meeting, class: "btn mr-4" %>
             </div>
+
             <div>
               <%= l meeting.start_time, format: :short, default: '-' %> &ndash;
               <%= l meeting.end_time, format: :short, default: '-'  %>
-              <%=  link_to "Editar", meeting, class:"border w-full p-3 hover:bg-gray-50 transition ease duration-300 rounded-lg text-center focus:bg-gray-100 lg:inline-block block lg:ml-2" %>
+              <%=  link_to "Editar", meeting, class:"bg-gray-500 border p-3 hover:bg-gray-50 transition ease duration-300 rounded-lg text-center focus:bg-gray-100 lg:inline-block block lg:ml-2" %>
             </div>
           <% else %>
-            <div>
-              <%= meeting.name %>
-            </div>
-            <div>
-              <%= l meeting.start_time, format: :short, default: '-' %> &ndash;
-              <%= l meeting.end_time, format: :short, default: '-'  %>
-            </div>
           <% end %>
         </div>
       </div>
       <%= link_to "Cancelar reunião", meeting, method: :delete, data: { confirm: "Tem certeza?" }, class: "btn btn-destroy ml-4" if admin? %>
     <% end %>
   </div>
+                <div class="flex-1 flex justify-between">
+      <%= link_to "Agendar uma nova reuniao", new_meeting_path, class:"w-full bg-gray-500 border p-3 hover:bg-gray-50 transition ease duration-300 rounded-lg text-center focus:bg-gray-100 lg:inline-block block lg:ml-2" %>
+    </div>
   <div id="calendar" class="tab-panel active">
     <h2>Calendario de Reunioes</h2>
     <div id="meeting-calendar">
