--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -3,5 +3,5 @@
 
   <%= render "form", meeting: @meeting %>
 
-  <%= link_to 'Voltar a reuniões', meetings_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  <%= link_to 'Voltar a reuniões', meetings_path, class:"bg-gray-500 border p-3 hover:bg-gray-50 transition ease duration-300 rounded-lg text-center focus:bg-gray-100 lg:inline-block block lg:ml-2" %>
 </div>
