--- a/app/views/simple_calendar/_week_calendar.html.erb
+++ b/app/views/simple_calendar/_week_calendar.html.erb
@@ -1,35 +1,42 @@
 <div class="simple-calendar">
-  <div class="calendar-heading w-full border border-collapse">
-    <%= link_to t('simple_calendar.previous', default: 'Anterior'), calendar.url_for_previous_view, class:"items-center p-2 -mr-1 rounded-lg focus:bg-gray-100 justify-between " %>
-    <% if calendar.number_of_weeks == 1 %>
-      <span class="calendar-title"><%= t('simple_calendar.week', default: 'Semana') %> <%= calendar.week_number %></span>
-    <% else %>
-      <span class="calendar-title"><%= t('simple_calendar.week', default: 'Semana') %> <%= calendar.week_number %> - <%= calendar.end_week %></span>
-    <% end %>
-    <%= link_to t('simple_calendar.next', default: 'Proxima'), calendar.url_for_next_view %>
+  <div class="flex justify-around p-4 border-b border-grey-light mb-6">
+    <div>
+      <%= link_to t('simple_calendar.previous', default: 'Anterior'), calendar.url_for_previous_view, class:"bg-gray-200 border p-3 hover:bg-gray-50 transition ease duration-300 rounded-lg text-center focus:bg-gray-100 lg:inline-block block lg:ml-2" %>
+    </div>
+    <div>
+      <% if calendar.number_of_weeks == 1 %>
+        <span class="calendar-title"> <%= t('date.month_names')[start_date.month] %> <%= start_date.year %></span>
+      <% else %>
+        <span class="calendar-title"> <%= t('date.month_names')[start_date.month] %> <%= start_date.year %> - <%= calendar.end_week %></span>
+      <% end %>
+    </div>
+    <div>
+      <%= link_to t('simple_calendar.next', default: 'Proxima'), calendar.url_for_next_view, class:"bg-gray-200 border p-3 hover:bg-gray-50 transition ease duration-300 rounded-lg text-center focus:bg-gray-100 lg:inline-block block lg:ml-2" %>
+    </div>
   </div>
-  <table class="table-auto table-striped w-full border border-collapse">
-    <thead class="table table-striped border">
-      <tr class="table table-striped border">
+  <table class="table-auto border border-collapse w-full justify-between">
+    <thead class="border">
+      <tr class="border">
         <% date_range.slice(0, 5).each do |day| %>
-          
-          <th class="table table-striped justify-between border border-collapser">
-          <%= t('date.abbr_day_names')[day.wday] %>
+          <th class=" border border-collapser">
+            <%= t('date.abbr_day_names')[day.wday] %>
           </th>
         <% end %>
       </tr>
     </thead>
-    <tbody class="table table-striped  border border-collapse">
+    <tbody class="border border-collapse flex-col">
       <% date_range.each_slice(5) do |week| %>
         <tr>
-          <% week.each do |day| %>
-            <%= content_tag :td, lass: calendar.td_classes_for(day) do %>
-              <% if day.wday == 0 || day.wday == 6 %>
-              <% else %>
-                <span class="text-sm text-grey-darker"> <% passed_block.call day, sorted_events.fetch(day, []) %> </span>
+          <div class="text-right">
+            <% week.each do |day| %>
+              <%= content_tag :td, lass: calendar.td_classes_for(day) do %>
+                <% if day.wday == 0 || day.wday == 6 %>
+                <% else %>
+                  <span class="text-sm text-grey-darker"> <% passed_block.call day, sorted_events.fetch(day, []) %> </span>
+                <% end %>
               <% end %>
             <% end %>
-          <% end %>
+          </div>
         </tr>
       <% end %>
     </tbody>
