Add day end  and end limit hour validates

--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: meeting, class: "contents") do |form| %>
   <% if meeting.errors.any? %>
     <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
-      <h2><%= pluralize(meeting.errors.count, "error") %> prohibited this meeting from being saved:</h2>
+      <h2><%= pluralize(meeting.errors.count, "error") %> não permitem que esta reunião seja salva:</h2>
 
       <ul>
         <% meeting.errors.each do |error| %>
@@ -18,12 +18,12 @@
 
   <div class="my-5">
     <%= form.label :inicio %>
-    <%= form.datetime_select :start_time, { start_day: Date.today, start_year: Date.today.year, minute_step: 30 }, { class: "select py-2 px-2 mr-2" } %>
+    <%= form.datetime_select :start_time, { start_day: Date.today, start_year: Date.today.year, minute_step: 60 }, { class: "select py-2 px-2 mr-2" } %>
   </div>
 
   <div class="my-5">
     <%= form.label :final %>
-    <%= form.datetime_select :end_time, { start_day: Date.today, start_year: Date.today.year, minute_step: 30 }, { class: "select py-2 px-2 mr-2" } %>
+    <%= form.datetime_select :end_time, { start_day: Date.today, start_year: Date.today.year, minute_step: 60 }, { class: "select py-2 px-2 mr-2" } %>
   </div>
 
   <div class="inline">
